  - Improved test for presence of WebGL (suggested by Git Demont, 
    https://github.com/dmurdoch/rgl/issues/31 ).
  - On macOS an interaction between rgl and the quartz() device
    caused a segfault (see issue #27).  Added workaround.
    (reported by Rich Heiberger, 
    https://github.com/dmurdoch/rgl/issues/27).
  - Fixed a bug affecting fat (lwd > 1) line segments in 
    rglwidget().
  - Add Biarch to DESCRIPTION so both architectures are built on 
    Windows.
  - A bug in the Makevars files caused builds using a 
    parallel make to fail.
  - A bug in conversion of displays to WebGL prevented planes
    from displaying properly.
  - In rglwidget(), background images could cause other parts of
    the display to disappear.

0.106.0
  - Changes for pkgdown compatibility have been added.  See
    the "Using rgl in pkgdown web sites".
  - The help pages have been edited to continue the 
    de-emphasization of rgl.* functions.
  - Changes have been made for compatibility with the 
    experimental Windows-UTF8 build of R.
  - Allowed infinite values for strip limits in filledContour3d.
  - Added drape3d(), to "drape" objects across a mesh.
    (Contributed by George Helffrich.)
  - Setting material property point_antialias = TRUE now
    gives round points in rglwidget() displays.
  - The reuse argument in rglwidget() is no longer used.
  - Sphere initialization in WebGL displays is now done
    entirely in Javascript.
  - Set "window_group" in X11 so rgl windows are grouped,
    based on code by Ivan Krylov.
  - filledContour3d() now accepts levels in decreasing order.
  - Added shadow3d() to project one mesh onto another.
  - Added facing3d() to subset a mesh to parts facing 
    in a particular direction.
  - mergeVertices and as.mesh3d.rglId have been improved.
  - Meshes may now include points and line segments as well
    as triangles and quads.  The arguments to as.mesh3d.default 
    have changed accordingly.