@@ -1,7 +1,8 @@
 export(.check3d, 
   abclines3d, addNormals, addToSubscene3d, arc3d,
   arrow3d, as.mesh3d, as.triangles3d, asRow,
-  ageSetter, asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
+  ageSetter, asEuclidean, asEuclidean2, asHomogeneous, asHomogeneous2,
+  aspect3d, axes3d, axis3d, box3d,
   bbox3d, bg3d, bgplot3d, 
 	clear3d, clearSubsceneList, clipplanes3d, clipplaneSlider, 
 	clipMesh3d, clipObj3d, close3d, contourLines3d,
