@@ -1245,7 +1245,10 @@ base graphics.
   - Added shadow3d() to project one mesh onto another.
   - Added facing3d() to subset a mesh to parts facing 
     in a particular direction.
-  - mergeVertices and as.mesh3d.rglId have been improved.
+  - mergeVertices() and as.mesh3d.rglId() have been improved.
   - Meshes may now include points and line segments as well
     as triangles and quads.  The arguments to as.mesh3d.default 
-    have changed accordingly.
+    have changed accordingly, and a new function mesh3d()
+    has been added.
+  - Added asHomogeneous2 and asEuclidean2 to work directly
+    with 3 x n and 4 x n matrices.
